Create controller test

--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,11 @@ jacocoTestReport {
         xml.enabled true
         html.enabled false
     }
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: 'com/itau/pix/PixApplication.java')
+        }))
+    }
 }
 
 check.dependsOn jacocoTestReport
