--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'jacoco'
     id 'org.springframework.boot' version '3.0.2'
     id 'io.spring.dependency-management' version '1.1.0'
-
+    id 'org.sonarqube' version '3.5.0.2730'
 }
 
 group = 'com.itau.pix'
@@ -60,11 +60,13 @@ jacocoTestReport {
         xml.enabled true
         html.enabled false
     }
-    afterEvaluate {
-        classDirectories.setFrom(files(classDirectories.files.collect {
-            fileTree(dir: it, exclude: 'com/itau/pix/PixApplication.java')
-        }))
-    }
 }
 
+sonarqube {
+    properties {
+        property "sonar.projectKey", "greijal_pix"
+        property "sonar.organization", "greijal"
+        property "sonar.host.url", "https://sonarcloud.io"
+    }
+}
 check.dependsOn jacocoTestReport
